Add form objects

--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang = "en">
   <head>
     <meta charset="utf-8">
+    <style>
+      html { overflow:  hidden; }
+    </style>
   </head>
   <body>
     <div id = "game"></div>
